2005-07-03  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.8.2 (Satch Boogie)

2005-07-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r12c3.

	* skins/posix/syscalls.c: Finalize mq call wrappers.

	* skins/vxworks/demos/koan.c: Add new VxWorks demo.

2005-06-29  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r12c2.

2005-06-27  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r12c1.

2005-06-23  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/x86.c (rthal_timer_request): Fix cpuid mess in
	IO_APIC over UP case.

 	* RELEASE: fusion-0.8.1 (Midnight)

2005-06-22  Philippe Gerum  <rpm@xenomai.org>

	* arch/ia64: Upgrade to r7 final.
	
	* arch/ppc: Upgrade to r7 final.

	* arch/i386/patches: Remove obsolete patches.

	* skins/posix: Move u_tid -> k_tid mapping to kernel space.
	
	* nucleus/shadow.c (rtai_sysentry, linux_sysentry): Try to get
	branch prediction right.

2005-06-21  Philippe Gerum  <rpm@xenomai.org>

	* skins/uvm/module.c (__fusion_skin_exit): Detach from the fusion
	core.

	* nucleus/pod.c (xnpod_suspend_thread): Force any relaxed shadow
	thread in the process of being suspended to harden itself. We do
	this by sending the thread SIGSYS, which is trapped and causes the
	proper migration into each interface library. By doing so, we make
	sure to stop the target thread properly by moving it back under
	the control of the nucleus. This solves a bad scheduling issue
	with the UVM support.

2005-06-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r11 final.

2005-06-20  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/mq.c: Rework creation and deletion of message queues
	to avoid holding the nucleus lock while calling xnarch allocation
	functions.
	Add EXPORT_SYMBOL for all mq functions.

2005-06-19  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_shutdown): Replace the flawed shutdown