@@ -6,7 +6,7 @@ CROSS_COMPILE = @CROSS_COMPILE@
 
 abs_srcdir = @abs_srcdir@
 
-libhal_SRC = x86.c
+libhal_SRC = x86.c usercopy.c
 
 if CONFIG_RTAI_HW_SMI_DETECT
 libhal_SRC += smi.c smi.h
